[project]
name = "melbourne"
version = "6.0.0"
description = "Scoreboard image generator"
authors = ["Aditya Duri <aditya.duri@gmail.com>"]

readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "fastapi>=0.115.6",
    "pathvalidate>=3.2.1",
    "pydantic-settings>=2.7.0",
    "pyside6>=6.8.1.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "webcolors>=24.11.1",
    "xlrd==1.2.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]
